@@ -16,6 +16,7 @@ Bugs fixed:
 - 3314383 Memory leak in CimResource_Enumerate_EP
 - 3047562 [patch] Create bzip2 tarballs on "make dist"
 - 3314762 Memory leak in method invoke using SFCB local interface
+- 3165732 Add ability for client library to specify configuration file
 
 Changes in 1.3.11
 =================
